# fools2021-notes

./: .gitignore  AA7E.sna  POSTPICKUP  PREPICKUP  b773.sna  cheats.cht  example.txt  fools2021.asm  fools2021.cht  fools2021.dump  fools2021.map  fools2021.sav  fools2021.sym  fools_v101.sav  freshspawn-passencrypt.sna  freshspawn-retire.sna  freshspawn.sna  itempickup-pre.sna  notes.txt  readme.md  seed0.sna  seedselection.sna  wholesome_reward.txt
asm/: A54F.asm  A5BE.asm  A847.asm  A86F.asm  A88D.asm  A8D6.asm  A963.asm  AA7E.asm  ADED.asm  AE03.asm  AE0E.asm  AE1B.asm  B773.asm  DB3F.asm  DB50.asm  DB63.asm  DB6F.asm
challenge3/: BGBRunner.h  CMakeLists.txt  CMakeSettings.json  EndianSwap.h  FileWatcher.cpp  FileWatcher.h  bizhawk - Copy.bmp.bak  cracker.cpp  zTilemap-dump
challenge3/save/: crackertemplate.sna
